force-app/main/default/objects/Project_Details__c/Project_Details__c.object-meta.xml
<CustomObject>
    <description>All project details can able to track here</description>
    <label>Project Details</label>
    <nameField>
        <label>Project Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>