force-app/main/default/objects/Project_Details__c/fields/Project_Cost__c.field-meta.xml
<CustomField>
    <fullName>Project_Cost__c</fullName>
    <description>Cost of the Project//june4changestest2</description>
    <label>Project Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>