force-app/main/default/objects/Project_Details__c/fields/Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>Project_Stage__c</fullName>
    <label>Project Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>