force-app/main/default/objects/Project_Details__c/recordTypes/Civil_Project.recordType-meta.xml
<RecordType>
    <fullName>Civil_Project</fullName>
    <active>true</active>
    <label>Civil Project</label>
</RecordType>