force-app/main/default/objects/Project_Details__c/recordTypes/Hardware_Project.recordType-meta.xml
<RecordType>
    <fullName>Hardware_Project</fullName>
    <active>true</active>
    <label>Hardware Project</label>
</RecordType>