force-app/main/default/objects/Project_Details__c/recordTypes/Software_Project.recordType-meta.xml
<RecordType>
    <fullName>Software_Project</fullName>
    <active>true</active>
    <label>Software Project</label>
</RecordType>